--- a/hugo_site/gen/tb_appearance.adoc
+++ b/hugo_site/gen/tb_appearance.adoc
@@ -45,7 +45,7 @@ h|D20
 |Large birthmark, surely proof you are of noble blood.
 |13
 |Large tattoo, it represents something important to you.
-|Numerous piercings, your face looks like a jewellery.
+|Numerous piercings, your face looks like a jewellery store.
 |14
 |Bald, either by choice or by necessity.
 |Long and luscious hair, your pride and joy.
